@@ -697,9 +697,11 @@ with variable value <b>%HOMEPATH%\Desktop\Frame3DD\temp</b></br>
 (The <b>Desktop\Frame3DD\temp</b> folder should already exist.)<br>
 Detailed information on how to set environment variables in Windows is <a href="http://vlaurie.com/computers2/Articles/environment.htm">here</a>, if you need it. 
 <li> <b><i>Recommended</i></b><br>
-Install <a href="http://adoxa.110mb.com/ansicon/">ansicon</a>, a Windows console program that can display text in color.<br>
+Install
+<a href="http://adoxa.3eeweb.com/ansicon/">
+ansicon</a>, a Windows console program that can display text in color.<br>
 Download and extract the
-<a href="http://adoxa.110mb.com/ansicon/dl.php?f=ansicon">
+<a href="http://adoxa.3eeweb.com/ansicon/dl.php?f=ansicon">
 ansicon .ZIP file</a> and copy the <b>x86</b> folder 
 into the <b>Desktop\Frame3DD\</b> folder.  <br>
 Make a shortcut from <b>Desktop\Frame3DD\x86\ansicon</b> to the <b>Desktop</b>.
@@ -720,7 +722,8 @@ Alternatively, you may open a
 "<a href="http://www.bleepingcomputer.com/tutorials/tutorial76.html#intro">command prompt window</a>" 
 <!-- <a href="http://en.wikipedia.org/wiki/Windows_command_line">Command Prompt</a> window -->
 (<b>Start > All Programs > Accessories > Command Prompt</b>),
-or an <a href="http://adoxa.110mb.com/ansicon/">ansicon</a> window.<br> 
+or an
+<a href="http://adoxa.3eeweb.com/ansicon/">ansicon</a> window.<br> 
 Change to the directory of example files, and run an example, as follows:
 <pre>
 chdir %HOMEPATH%\Desktop\Frame3DD
@@ -746,7 +749,8 @@ Three tutorials for vim/evim/gvim are <a href="http://www.jerrywang.net/vi/">her
 <pre>
 frame3dd  examples/MyFrame.3dd  examples/MyResultsA.out
 </pre>
- ... within a Command Prompt or <a href="http://adoxa.110mb.com/ansicon/">ansicon</a> window.  
+ ... within a Command Prompt or
+<a href="http://adoxa.3eeweb.com/ansicon/">ansicon</a> window.  
 <!-- <li> You may wish to delete all the files in the temporary file directory (c:\temp) after you have finished your analyses.  -->
 </ol>
 
